<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color1"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".LoginActivity" >
    
       <TextView
        android:id="@+id/textView_userid" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_user_id"
        android:textSize="16sp"/>
         
         <EditText 
         android:id="@+id/editText_userid"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:paddingLeft="6dp"
         android:textSize="14sp"
         android:inputType="text"
         android:singleLine="true"
         android:hint="@string/lbl_user_id_hint"/>
     
      <TextView
        android:id="@+id/textView_password" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_password"
        android:textSize="16sp"/>
    
     <EditText 
         android:id="@+id/editText_password"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:paddingLeft="6dp"
         android:textSize="14sp"
         android:inputType="textPassword"
         android:singleLine="true"
         android:hint="@string/lbl_password_hint"/>
    
     <Button 
         android:id="@+id/loginbt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:text="@string/lbl_login"/>
     <TextView
        android:id="@+id/change_passowrdTV" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_changes_password"
        android:layout_marginTop="70dp"
        android:textColor="@color/color_blue"
        android:layout_gravity="bottom|center_horizontal"
        android:textSize="16sp"/>
     
</LinearLayout>
