<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color1"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".ProjectDetailActivity" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >
                <TextView
                    style="@style/style_TextView_Detai_Left"
                    android:text="@string/lbl_title" />
                <TextView
                    android:id="@+id/titleTextViewDetail"
                    style="@style/style_TextView_Detai_Right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >
                <TextView
                    style="@style/style_TextView_Detai_Left"
                    android:text="@string/lbl_location" />
                <TextView
                    android:id="@+id/locationTextViewDetail"
                    style="@style/style_TextView_Detai_Right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >
                <TextView
                    style="@style/style_TextView_Detai_Left"
                    android:text="@string/lbl_chariman" />
                <TextView
                    android:id="@+id/chairmanTextViewDetail"
                    style="@style/style_TextView_Detai_Right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >
                <TextView
                    style="@style/style_TextView_Detai_Left"
                    android:text="@string/lbl_clubname" />
                <TextView
                    android:id="@+id/clubnameTextViewDetail"
                    style="@style/style_TextView_Detai_Right" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >
                <TextView
                    style="@style/style_TextView_Detai_Left"
                    android:text="@string/lbl_date" />
                <TextView
                    android:id="@+id/dateTextViewDetail"
                    style="@style/style_TextView_Detai_Right" />
            </LinearLayout>
           
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >
                <TextView
                    style="@style/style_TextView_Detai_Left"
                    android:text="@string/lbl_last_modify" />
                <TextView
                    android:id="@+id/lastmodifyTextViewDetail"
                    style="@style/style_TextView_Detai_Right" />
            </LinearLayout>
           
           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >
                <TextView
                    style="@style/style_TextView_Detai_Left"
                    android:text="@string/lbl_status" />
                <TextView
                    android:id="@+id/statusTextViewDetail"
                    style="@style/style_TextView_Detai_Right" />
            </LinearLayout>
            
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical" >
                <TextView
                    style="@style/style_TextView_Detai_Left"
                    android:text="@string/lbl_description" />
                <TextView
                    android:id="@+id/descriptionTextViewDetail"
                    style="@style/style_TextView_Detai_Right"
                    android:layout_width="match_parent"
                    android:layout_marginTop="2dp" />
            </LinearLayout>
            
            <TextView
                   style="@style/style_TextView_Detai_Left"
                   android:text="@string/lbl_photos"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:layout_marginTop="10dp"/>
            <HorizontalScrollView 
	      			android:layout_width="wrap_content"
		 			android:layout_height="wrap_content"
		 			android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
		 			android:layout_marginTop="5dp">
			        <LinearLayout 
				        android:id="@+id/photolistLLDetail"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:padding="10dp"
				        android:orientation="horizontal">
			    	</LinearLayout>
		</HorizontalScrollView>
		
         <LinearLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
             <Button 
                 android:id="@+id/generateReportButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="3dp"
                 style="?android:attr/buttonStyleSmall"
                 android:text="@string/lbl_generate_report"/>
                <Button 
                 android:id="@+id/sendToServerButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 style="?android:attr/buttonStyleSmall"
                 android:text="@string/lbl_send_to_server"/>
         </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>