<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color1"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".LoginActivity" >
    
       <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_old_pass"
        android:textSize="16sp"/>
         
         <EditText 
         android:id="@+id/editText_oldpass"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:paddingLeft="6dp"
         android:textSize="14sp"
         android:inputType="text"
         android:singleLine="true"/>
     
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_new_pass"
        android:textSize="16sp"/>
    
     <EditText 
         android:id="@+id/editText_newpass"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:paddingLeft="6dp"
         android:textSize="14sp"
         android:inputType="textPassword"
         android:singleLine="true"/>
     
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_confirm_pass"
        android:textSize="16sp"/>
    
     <EditText 
         android:id="@+id/editText_confirm_pass"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:paddingLeft="6dp"
         android:textSize="14sp"
         android:inputType="textPassword"
         android:singleLine="true"/>
     
    
     <Button 
         android:id="@+id/savebt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:text="@string/lbl_save"/>
</LinearLayout>
